--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "imagekitio-react": "^4.3.0",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
+    "motion": "^12.29.2",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
